openshift/streamlit/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamlit
  template:
    metadata:
      labels:
        app: streamlit
    spec:
      serviceAccountName: proxy
      containers:
      - name: oauth-proxy
        image: registry.redhat.io/openshift4/ose-oauth-proxy-rhel9@sha256:603f31cbe3035d001a57f371fea58acd597143893f6409ea5adb9ce447c04875
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8443
          name: public
        args:
        - --https-address=:8443
        - --provider=openshift
        - --openshift-service-account=proxy
        - --upstream=http://localhost:8501
        - --tls-cert=/etc/tls/private/tls.crt
        - --tls-key=/etc/tls/private/tls.key
        - --cookie-secret=SECRET
        volumeMounts:
        - mountPath: /etc/tls/private
          name: proxy-tls
      - image: quay.io/redhat-et/streamlit_client:0.1.0
        imagePullPolicy: IfNotPresent
        name: streamlit-client
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8501
          protocol: TCP
      volumes:
      - name: proxy-tls
        secret:
          secretName: proxy-tls
